--- a/css/style.css
+++ b/css/style.css
@@ -313,3 +313,92 @@ color: #fff;
 .logo-discover{
     color:#000;
 }
+
+/* send money */
+#sendMoney{
+    width: 98%;
+    
+
+}
+
+.profile-box{
+    border-radius: 9px;
+    background: var(--bg-color-white);
+    padding: 8px 8px;
+    width: 70px;
+
+ 
+}
+.sendMoneyProfileImage{
+    width: 100%;
+    height: 50px!important;
+
+    border-radius: 8px;
+
+}
+.profile-name{
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    margin-bottom: 0px;
+    margin-top: 5px;
+    width: 100%;
+    font-size: 10px;
+    
+}
+.custom-sendMoney-slide{
+width: calc(((35% - 45px) / 1) + 3px)!important;
+margin-right: 14px!important;
+}
+
+/* monthly bills start */
+#monthlyBills{
+    width: 98%;
+}
+.box-monthlyBill{
+    padding: 10px 15px;
+    background: var(--bg-color-white);
+    border-radius: 9px;
+    width: 45%!important;
+    margin-right: 12px!important;
+    
+}
+
+.box-monthlyBill  img{
+    margin-top: 12px!important;
+    display: block;
+    width: 50px;
+    border-radius: 12%!important;
+
+
+}
+.box-monthlyBill h5{
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    font-weight: 500;
+    margin-top: 13px;
+    color:rgb(0, 0, 0);
+}
+.box-monthlyBill p{
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 12px;
+    font-weight: 500;
+    margin-top: 13px;
+    color: var(--text-color-gray)
+}
+.payBtn{
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    color: var(--text-color-white);
+    border: none;
+    background-color: #6236FF;
+    border-radius: 24px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    display: block;
+}
