--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 /* unique styles */
-.add-button {
-    position: absolute;
-    top: 1px;
-    left: 1px;
-  }
+
 :root {
     --custom-bg-primary: #4732be;
     --text-color-white: #fff;
@@ -30,7 +26,7 @@
 body {
     height: 1600px;
     overflow-x: hidden;
-    background: rgb(221, 219, 219);
+    background: rgb(245, 240, 240);
 }
 
 header {
@@ -104,6 +100,7 @@ header nav {
 
 .walletBox {
     margin-top: 25px;
+    margin-right: 3px;
     border-radius: 8px;
     width: 70px;
     height: 60px;
@@ -336,7 +333,7 @@ color: #fff;
     border-radius: 8px;
 
 }
-.profile-name{
+.profile-name-sendmoney{
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
     margin-bottom: 0px;
@@ -401,4 +398,37 @@ margin-right: 14px!important;
     padding-top: 4px;
     padding-bottom: 4px;
     display: block;
+}
+
+/* savings goal */
+#savingsGoal{
+    width: 98%;
+}
+.goals{
+    width: 100%;
+    margin-bottom: 5%;
+    background-color: var(--bg-color-white);
+    padding: 15px 25px;
+    border-radius: 9px;
+}
+.goal-name{
+    color: #000;
+    font-weight: 500;
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+}
+.goal-category{
+    color: var(--text-color-gray);
+    font-family: 'Poppins',sans-serif;
+    font-weight: 500;
+    font-size: 12px;
+}
+.costOfTheGoal{
+    color: #000;
+    font-weight: 600;
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+}
+.progress-bar{
+    font-family: 'Poppins', sans-serif!important;
 }
