--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,9 @@
     --color-dark-pink: rgb(255, 52, 86);
     --color-success: rgb(34, 182, 47);
 }
-
+a{
+    color:#000;
+}
 .bg-transparent {
     background-color: transparent!important;
 }
@@ -441,40 +443,17 @@ margin-right: 14px!important;
 .progress-bar{
     font-family: 'Poppins', sans-serif!important;
 }
-/* bottom fixed nav */
-.custom-bottom-nav{
-    width: 100%;
-    margin-left: 0!important;
-    background-color: aliceblue;
-}
-.nav-box{
-    border-top: 1px solid transparent;
-    margin: 0;
-    padding: 15px 8px;
-    background: aliceblue;
-    width: 25%!important;
-    margin-right: 5px;
-}
-.nav-box:hover{
-    border-top: 2px solid var(--custom-bg-primary);
-}
-.bottom-navIcon i{
-    font-size: 22px;
-}
-.nav-box p{
-    font-size: 10px;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
-    color: #27173E;
-    margin-top: 3px!important;
-    text-align: center;
-}
+
 /* footer start */
-footer{
+.footer{
     width: 100%;
     background-color: #fff;
     padding: 16px 10px;
+    margin-bottom: 12%;
+    box-shadow: 0 1px 3px 0 rgb(0 0 0 / 9%);
+
 }
+
 .footer-heading{
     font-size: 14px;
     font-family: 'Poppins',sans-serif;
@@ -492,4 +471,40 @@ footer{
     text-align: center;
     margin-top: 0;
     margin-bottom: 0px;
+}
+
+/* bottom fixed nav */
+.custom-bottom-nav{
+    width: 100%;
+    margin-left: 0!important;
+    background-color: #fff;
+    box-shadow: 0 1px 3px 0 rgb(0 0 0 / 9%);
+
+}
+.nav-box{
+    border-top: 1px solid transparent;
+    margin: 0;
+    padding: 10px 8px;
+    width: 25%!important;
+    margin-right: 5px;
+}
+
+.bottom-navIcon i{
+    font-size: 22px;
+}
+.nav-box p a{
+    font-size: 10px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    color: #27173E;
+    margin-top: 3px!important;
+    text-align: center;
+    text-decoration: none;
+}
+.active{
+    color:rgb(62, 62, 248);
+    border-top: 3px solid rgb(62, 62, 248);
+}
+ .active p a{
+    color: rgb(62, 62, 248);
 }
